Bug 1822695: Group invite button overlaps pending friend request on Profile page
Put .pendingfriendcard on right side of pageheader and adjusted
margins to fit for responsive.

Also fixed card-footers to apply correct background and border color
for different statuses so .pendingfriendcard inherits the warning
color properly.

behatnotneeded

(cherry picked from commit 7e45536ca347d6b0e52da9ef2b488115f7227e73)

--- a/htdocs/theme/raw/sass/components/_btn.scss
+++ b/htdocs/theme/raw/sass/components/_btn.scss
@@ -515,15 +515,15 @@ td.action-list-copy {
     }
 }
 
-// Profile page accept friends form button alignment
+// Profile page accept friends form
 .pendingfriendscard {
-    margin-top: 20px;
-    margin-bottom: -50px;
-
     .btn form {
         display: inline-block;
 
         button {
+            padding: 0;
+            border: 0;
+
             &:hover,
             &:focus {
                 text-decoration: none;
